--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
     }
    ],
    "source": [
-    "df_test = spark.read.csv(\"Dati/ciao.csv\", header = True)\n",
+    "df_test = spark.read.csv(\"Dati/test.csv\", header = True)\n",
     "df_test.show()\n",
     "df_test.printSchema()"
    ]
