Notebook Edit:  Dictionary codlinha-nomelinha  & Write to CSV

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -283,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -320,6 +322,48 @@
    ],
    "source": [
     "df.groupBy(\"codlinha\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------+\n",
+      "|codlinha| count|\n",
+      "+--------+------+\n",
+      "|     000|229253|\n",
+      "|     OPC| 36660|\n",
+      "|     ARA|  8965|\n",
+      "|     040|  7288|\n",
+      "|     021|  6109|\n",
+      "|     020|  4839|\n",
+      "|     216|  4808|\n",
+      "|     030|  4757|\n",
+      "|     050|  4420|\n",
+      "|     541|  3083|\n",
+      "|     650|  2957|\n",
+      "|     703|  2906|\n",
+      "|     TPH|  2659|\n",
+      "|     860|  2566|\n",
+      "|     338|  2525|\n",
+      "|     684|  2507|\n",
+      "|     658|  2448|\n",
+      "|     545|  2232|\n",
+      "|     876|  2231|\n",
+      "|     870|  2228|\n",
+      "+--------+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"codlinha\").count().orderBy('count', ascending=False).show()"
    ]
   },
   {
@@ -854,11 +898,262 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distinct values multi-column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------------+----------+------------+--------------------+\n",
+      "|CODLINHA|       NOMELINHA|CODVEICULO|NUMEROCARTAO|      DATAUTILIZACAO|\n",
+      "+--------+----------------+----------+------------+--------------------+\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0001430250|07/10/15 07:37:02...|\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0002470195|07/10/15 07:51:25...|\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0003234514|07/10/15 18:49:49...|\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0003234514|07/10/15 18:49:51...|\n",
+      "|     000|    OPER S/LINHA|     08047|  0000771305|07/10/15 16:47:16...|\n",
+      "|     000|    OPER S/LINHA|     08047|  0000856665|07/10/15 16:50:18...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0002115218|07/10/15 13:18:26...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0002178679|07/10/15 14:18:59...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0000849493|07/10/15 14:40:56...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0000849493|07/10/15 14:41:05...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0002202962|07/10/15 16:48:12...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0001839942|07/10/15 18:13:05...|\n",
+      "|     814|       MOSSUNGUÊ|     LN404|  0003527951|07/10/15 17:07:31...|\n",
+      "|     814|       MOSSUNGUÊ|     LN404|  0001188263|07/10/15 17:46:36...|\n",
+      "|     814|       MOSSUNGUÊ|     LN404|  0003260485|07/10/15 17:53:46...|\n",
+      "|     814|       MOSSUNGUÊ|     LN404|  0002970828|07/10/15 21:27:45...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0003528264|07/10/15 19:25:55...|\n",
+      "|     629|  ALTO BOQUEIRÃO|     KA603|  0003528264|07/10/15 19:25:58...|\n",
+      "|     653|          SABARÁ|     HA293|  0003410298|07/10/15 16:15:46...|\n",
+      "|     653|          SABARÁ|     HA293|  0002471107|07/10/15 18:44:03...|\n",
+      "+--------+----------------+----------+------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------------+----------+------------+--------------------+\n",
+      "|CODLINHA|       NOMELINHA|CODVEICULO|NUMEROCARTAO|      DATAUTILIZACAO|\n",
+      "+--------+----------------+----------+------------+--------------------+\n",
+      "|     180|AVERDE/ABRANCHES|     HC302|  0010064208|07/10/15 08:07:59...|\n",
+      "|     271|     LARANJEIRAS|     BC944|  0002801400|07/10/15 05:58:41...|\n",
+      "|     331|        MERCÚRIO|     DA850|  0003471943|07/10/15 06:47:17...|\n",
+      "|     673|         FORMOSA|     HN610|  0000378712|07/10/15 07:31:49...|\n",
+      "|     184|        V. SUIÇA|     BN621|  0003154177|07/10/15 06:40:48...|\n",
+      "|     212|           SOLAR|     BN406|  0002208699|07/10/15 06:22:11...|\n",
+      "|     650|S.RITA/PINHEIRIN|     HA287|  0002345121|07/10/15 14:53:32...|\n",
+      "|     674|  N. SRA. DA LUZ|     LC022|  0002288037|07/10/15 06:58:16...|\n",
+      "|     680|         RURBANA|     HA299|  0003559777|07/10/15 13:30:54...|\n",
+      "|     789|      MAD. CAIUÁ|     JC001|  0002297351|07/10/15 06:41:14...|\n",
+      "|     913|    BUTIATUVINHA|     MN401|  0003204194|07/10/15 06:43:53...|\n",
+      "|     182|       ABRANCHES|     BC311|  0003049980|07/10/15 09:11:16...|\n",
+      "|     464|A.MUN/J.BOTÂNICO|     MN609|  0003251823|07/10/15 10:25:51...|\n",
+      "|     614|  FAZENDINHA/PUC|     HA616|  0002302949|07/10/15 05:01:26...|\n",
+      "|     X24|REFORÇO SAMBAQUI|     EA203|  0002268018|07/10/15 06:29:28...|\n",
+      "|     720|FAZEN/C.COMPRIDO|     JA019|  0002730640|07/10/15 07:07:46...|\n",
+      "|     260|M.HERMES/STA.EFI|     BC949|  0003211057|07/10/15 17:16:06...|\n",
+      "|     060| INTERBAIRROS VI|     HB602|  0003165057|07/10/15 06:16:39...|\n",
+      "|     393|C.IMB./P.BARIGUI|     DN602|  0003345061|07/10/15 06:30:51...|\n",
+      "|     541|   BAIRRO NOVO A|     GA179|  0002672672|07/10/15 05:37:50...|\n",
+      "+--------+----------------+----------+------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_distinct = df.dropDuplicates(['CODLINHA', 'NOMELINHA'])\n",
+    "df_distinct.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----+\n",
+      "|codlinha|count|\n",
+      "+--------+-----+\n",
+      "|     829|    1|\n",
+      "|     467|    1|\n",
+      "|     475|    1|\n",
+      "|     718|    1|\n",
+      "|     870|    1|\n",
+      "|     666|    1|\n",
+      "|     169|    1|\n",
+      "|     030|    1|\n",
+      "|     TSP|    1|\n",
+      "|     205|    1|\n",
+      "|     334|    1|\n",
+      "|     635|    1|\n",
+      "|     TXA|    1|\n",
+      "|     232|    1|\n",
+      "|     462|    1|\n",
+      "|     470|    1|\n",
+      "|     272|    1|\n",
+      "|     711|    1|\n",
+      "|     ARA|    1|\n",
+      "|     521|    1|\n",
+      "+--------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_distinct.groupBy(\"codlinha\").count().orderBy('count', ascending=False).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "512013"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "257"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_distinct.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------------+\n",
+      "|codlinha|       nomelinha|\n",
+      "+--------+----------------+\n",
+      "|     180|AVERDE/ABRANCHES|\n",
+      "|     271|     LARANJEIRAS|\n",
+      "|     673|         FORMOSA|\n",
+      "|     331|        MERCÚRIO|\n",
+      "|     650|S.RITA/PINHEIRIN|\n",
+      "|     674|  N. SRA. DA LUZ|\n",
+      "|     680|         RURBANA|\n",
+      "|     184|        V. SUIÇA|\n",
+      "|     212|           SOLAR|\n",
+      "|     789|      MAD. CAIUÁ|\n",
+      "|     913|    BUTIATUVINHA|\n",
+      "|     182|       ABRANCHES|\n",
+      "|     X24|REFORÇO SAMBAQUI|\n",
+      "|     614|  FAZENDINHA/PUC|\n",
+      "|     464|A.MUN/J.BOTÂNICO|\n",
+      "|     720|FAZEN/C.COMPRIDO|\n",
+      "|     260|M.HERMES/STA.EFI|\n",
+      "|     060| INTERBAIRROS VI|\n",
+      "|     393|C.IMB./P.BARIGUI|\n",
+      "|     541|   BAIRRO NOVO A|\n",
+      "+--------+----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_distinct.select(df_distinct[\"codlinha\"], df_distinct[\"nomelinha\"]).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "257"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_distinct.select(df_distinct[\"codlinha\"], df_distinct[\"nomelinha\"]).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write CSV with dictionary of codlinha-nomelinha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dictionary = df_distinct.select(df_distinct[\"codlinha\"], df_distinct[\"nomelinha\"])\n",
+    "#dictionary.write.csv('dictionary.csv')\n",
+    "dictionary.toPandas().to_csv('dictionary.csv')"
+   ]
   }
  ],
  "metadata": {
