notebook modified: pyspark profiling

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1005,26 +1005,26 @@
       "+--------+-----+\n",
       "|codlinha|count|\n",
       "+--------+-----+\n",
+      "|     TXA|    1|\n",
       "|     829|    1|\n",
       "|     467|    1|\n",
-      "|     475|    1|\n",
-      "|     718|    1|\n",
-      "|     870|    1|\n",
-      "|     666|    1|\n",
       "|     169|    1|\n",
       "|     030|    1|\n",
       "|     TSP|    1|\n",
       "|     205|    1|\n",
       "|     334|    1|\n",
-      "|     635|    1|\n",
-      "|     TXA|    1|\n",
+      "|     870|    1|\n",
+      "|     666|    1|\n",
+      "|     714|    1|\n",
       "|     232|    1|\n",
+      "|     ARA|    1|\n",
+      "|     521|    1|\n",
+      "|     625|    1|\n",
+      "|     635|    1|\n",
       "|     462|    1|\n",
       "|     470|    1|\n",
       "|     272|    1|\n",
       "|     711|    1|\n",
-      "|     ARA|    1|\n",
-      "|     521|    1|\n",
       "+--------+-----+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
        "512013"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
        "257"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,14 +1146,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "dictionary = df_distinct.select(df_distinct[\"codlinha\"], df_distinct[\"nomelinha\"])\n",
-    "#dictionary.write.csv('dictionary.csv')\n",
-    "dictionary.toPandas().to_csv('dictionary.csv')"
+    "###dictionary.write.csv('dictionary.csv')  NON USARE\n",
+    "#dictionary.toPandas().to_csv('dictionary.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pyspark Profiling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spark_df_profiling\n",
+    "\n",
+    "report = spark_df_profiling.ProfileReport(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report.to_file(\"testing.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diagnosis Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+----------------+------------------+------------------+--------------------+\n",
+      "|summary|          CODLINHA|       NOMELINHA|        CODVEICULO|      NUMEROCARTAO|      DATAUTILIZACAO|\n",
+      "+-------+------------------+----------------+------------------+------------------+--------------------+\n",
+      "|  count|            512013|          512013|            512013|            512013|              512013|\n",
+      "|   mean| 235.2516363444996|            null| 4333.230022916709|2776320.8005109243|                null|\n",
+      "| stddev|304.65900053149915|            null|3040.9573491901283|1164166.3394630118|                null|\n",
+      "|    min|               000|A.MUN/J.BOTÂNICO|             00001|        0000116745|07/10/15 00:01:24...|\n",
+      "|    max|               Z03|       ZOOLÓGICO|             MR106|        0010066452|08/10/15 00:58:34...|\n",
+      "+-------+------------------+----------------+------------------+------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary_df = df.describe('CODLINHA','NOMELINHA','CODVEICULO','NUMEROCARTAO','DATAUTILIZACAO')\n",
+    "summary_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+----------------+------------------+------------------+--------------------+\n",
+      "|summary|          CODLINHA|       NOMELINHA|        CODVEICULO|      NUMEROCARTAO|      DATAUTILIZACAO|\n",
+      "+-------+------------------+----------------+------------------+------------------+--------------------+\n",
+      "|  count|            512013|          512013|            512013|            512013|              512013|\n",
+      "|   mean| 235.2516363444996|            null| 4333.230022916709|2776320.8005109243|                null|\n",
+      "| stddev|304.65900053149915|            null|3040.9573491901283|1164166.3394630118|                null|\n",
+      "|    min|               000|A.MUN/J.BOTÂNICO|             00001|        0000116745|07/10/15 00:01:24...|\n",
+      "|    25%|               0.0|            null|            2083.0|         2236986.0|                null|\n",
+      "|    50%|               0.0|            null|            3068.0|         2868972.0|                null|\n",
+      "|    75%|             532.0|            null|            7020.0|         3353305.0|                null|\n",
+      "|    max|               Z03|       ZOOLÓGICO|             MR106|        0010066452|08/10/15 00:58:34...|\n",
+      "+-------+------------------+----------------+------------------+------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary_df = df.summary()\n",
+    "summary_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "512013"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna().count()\n",
+    "#se uguale a 512013 allora non ci sono missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-------------+\n",
+      "|codlinha|max(codlinha)|\n",
+      "+--------+-------------+\n",
+      "|     467|          467|\n",
+      "|     829|          829|\n",
+      "|     666|          666|\n",
+      "|     870|          870|\n",
+      "|     TXA|          TXA|\n",
+      "+--------+-------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupby('codlinha').agg({'codlinha': 'max'}).show(5)\n",
+    "#al posto di 'max' ci può andare un espressione come 'avg', 'min' o anche altre, ma non ne trovo altre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding a new column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------------+\n",
+      "|codlinha|Purchase_new|\n",
+      "+--------+------------+\n",
+      "|     280|         280|\n",
+      "|     280|         280|\n",
+      "|     280|         280|\n",
+      "|     280|         280|\n",
+      "|     000|         000|\n",
+      "+--------+------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn('Purchase_new', col('codlinha')).select('codlinha','Purchase_new').show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------------+----------+------------+--------------------+------------+\n",
+      "|CODLINHA|       NOMELINHA|CODVEICULO|NUMEROCARTAO|      DATAUTILIZACAO|Purchase_new|\n",
+      "+--------+----------------+----------+------------+--------------------+------------+\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0001430250|07/10/15 07:37:02...|         280|\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0002470195|07/10/15 07:51:25...|         280|\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0003234514|07/10/15 18:49:49...|         280|\n",
+      "|     280|N. SRA.DE NAZARÉ|     BC911|  0003234514|07/10/15 18:49:51...|         280|\n",
+      "|     000|    OPER S/LINHA|     08047|  0000771305|07/10/15 16:47:16...|         000|\n",
+      "+--------+----------------+----------+------------+--------------------+------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_new_column=df.withColumn('Purchase_new', col('codlinha'))\n",
+    "df_new_column.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
